* feat(Timeline.tsx): add functionality to toggle search bar visibility * fix(Timeline.tsx): handle cancel event to hide search bar * fix(variables.css): set transparent background and border color for ion-toolbar in iOS mode

--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -19,8 +19,8 @@ http://ionicframework.com/docs/theming/ */
   --ion-toolbar-border-color: var(--sparking-bg-dark-color);
 }
 .ios ion-toolbar {
-  --ion-toolbar-background: var(--sparking-bg-light-color);
-  --ion-toolbar-border-color: var(--sparking-bg-light-color);
+  --ion-toolbar-background: transparent;
+  --ion-toolbar-border-color: transparent;
 }
 
 .ios ion-modal {
